# red_collar_test

./: .gitignore  README.md  conftest.py  env.example  pyproject.toml  test_api.sh
.github/workflows/: tests.yml
config/: asgi.py  settings.py  urls.py  wsgi.py
points/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
points/migrations/: 0001_initial.py
